# eclipse-rest

./: CHANGELOG.md  LICENSE  README.md  default-rules.txt  eclipse-rest.cabal  hie.yaml  stack.yaml
app/: Main.hs
cli/: Main.hs
http/: Main.hs
lib/: eclipse.hs
lib/data/: Collectable.hs  Game.hs  Misc.hs  Player.hs  ResearchStore.hs  Rules.hs  Tile.hs  Tiles.hs
