
cabal-version:      2.4
name:               eclipse-rest
version:            0.0.0.0
author:             Tristan Hilbert (aka TFlexSoom)
maintainer:         tchilbert@live.com
description:    Please see the README on GitHub at <https://github.com/tflexsoom/eclipse-rest#readme>
homepage:       https://github.com/tflexsoom/eclipse-rest#readme
bug-reports:    https://github.com/tflexsoom/eclipse-rest/issues
copyright:      2023 Tristan Hilbert
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
  README.md
  CHANGELOG.md


library eclipse-lib
  hs-source-dirs:
      lib
  build-depends:
      base ^>=4.16.0.0
  default-language: Haskell2010

executable eclipse-rest
    main-is:          Main.hs
    build-depends:    
        eclipse-lib
      , base ^>=4.16.0.0
    hs-source-dirs:   app
    default-language: Haskell2010

-- test-suite eclipse-rest
--  type: exitcode-stdio-1.0
--  main-is: Spec.hs
--  hs-source-dirs:
--      test
--  build-depends:
--      HUnit
--    , QuickCheck
--    , base ^>=4.16.0.0
--    , containers
--    , hspec
--  default-language: Haskell2010